Fixing a bug with modal visibility on mobile

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -225,7 +225,7 @@
 
 .modal-box {
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   padding-top: 12.8rem;
   left: 0;
   top: 0;
